<resources>
    <string name="app_name">Adekunle_Ganiyat_S2110996</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_detailed_forecast">DetailedForecastActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_settings">settings</string>
    <string name="title_map">map</string>
    <string name="title_search">search</string>
    <string name="title_home">home</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_recent_location">RecentLocation</string>
    <!-- Strings used for locations suggestion -->
    <string-array name="locations">
        <item>Glasgow</item>
        <item>London</item>
        <item>New York</item>
        <item>Oman</item>
        <item>Mauritius</item>
    </string-array>
    <string name="title_activity_air_quality">AirQualityActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="refresh_icon_description">Refresh weather data</string>
    <string name="last_updated">Last updated time</string>
    <string name="precipitation">Precipitation</string>
    <string name="humidity">Humidity</string>
    <string name="wind">wind</string>
    <string name="weatherCondition">weatherCondition</string>
    <string name="weather_icon_description">Weather Icon</string>
    <string name="location_name">Location name</string>
    <string name="date">Date</string>
    <string name="weather_condition">Weather Condition\n</string>
    <string name="forecast_temperature">forecast temperature\n</string>
    <string name="uv">UV</string>
    <string name="back_arrow">Back arrow</string>
    <string name="pressure">pressure</string>
    <string name="visibility">visibility</string>
    <string name="wind_speed">wind speed</string>
    <string name="weather_icon">weather_icon</string>
    <string name="pressure_icon">pressure icon</string>
    <string name="wind_icon">wind icon</string>
    <string name="humidity_icon">humidity icon</string>
    <string name="visibility_icon">visibility icon</string>
    <string name="wind_speed_icon">wind speed icon</string>
    <string name="pollution_icon">pollution icon</string>
    <string name="pollution">pollution\n</string>
    <string name="uv_icon">UV icon</string>
    <string name="wind_direction">wind direction</string>
    <string name="day">Day of week</string>
    <string name="expand_collapse_icon">Expand collapse icon</string>
    <string name="pollutants">pollutants</string>
    <string name="title_compare">compare</string>

    <!-- Refresh Frquency Entries -->
    <string-array name="refresh_frequency_entries">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>

    <!-- Refresh Frquency Values -->
    <string-array name="refresh_frequency_values">
        <item>1800</item>
        <item>3600</item>
        <item>10800</item>
        <item>21600</item>
        <item>43200</item>
        <item>86400</item>
    </string-array>

    <!-- Theme Entries -->
    <string-array name="theme_entries">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <!-- Theme Values -->
    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>