<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="120dp"
    android:layout_height="320dp"
    android:layout_margin="8dp"
    android:layout_marginBottom="15dp"
    android:background="@drawable/rec_background"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rec_background"
        android:orientation="vertical"
        android:padding="5dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/day_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:text="@string/day"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="62dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/mooncloud_fast_wind" />

        <TextView
            android:id="@+id/weather_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/weather_condition"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/temperature_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forecast_temperature"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/uv_index_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uv"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wind_speed_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/humidity_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>