<?xml version="1.0" encoding="utf-8"?>
<!-- Adekunle Ganiyat - S2110996 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/transparent_purple"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="353dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/weather_icon_description"
            android:paddingStart="20dp"
            android:src="@drawable/mooncloud_fast_wind" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingStart="3dp">

            <ImageView
                android:id="@+id/refresh_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/refresh_icon_description"
                android:src="@drawable/sync" />

            <TextView
                android:id="@+id/last_update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="12:00"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/temperature"
        android:layout_width="59dp"
        android:layout_height="52dp"
        android:text="33°"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temperature"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/weather_icon"
        android:text="@string/weatherCondition"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_toEndOf="@id/weather_icon"
        android:text="@string/location_name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weather_icon"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/wind_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/wind_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="15 mph"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/humidity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="33%"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/pressure_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/pressure_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="88%"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>